Update paper template and remove useless things

--- a/Paper.tex
+++ b/Paper.tex
@@ -79,76 +79,16 @@
 
     \textbf{Division of Natural and Applied Sciences}
 
-    \textbf{SW theses - Template}
-
-    Instructions
-
-    \begin{itemize}
-        \item
-        Black text -- \emph{Do not delete}. Everything in black stays in the
-        document.
-        \item
-        Red text -- \emph{Model text}. Replace with your own text, then change
-        the ink color to black.
-        \item
-        Blue text -- \emph{Delete}. The blue text is instructional, providing
-        general guidance for what goes into a particular section.
-    \end{itemize}
-
-    \textbf{Overview}
-
-    The Title Page, Table of Contents, and Abstract, are the first three
-    pages of the document. The Table of Contents as (iiI), and the Abstract
-    as (ii). (The title page does not include a page number). You should
-    include a single-page Acknowledgements/Dedication and/or Appendix/ces as
-    options. The acknowledgements, or dedication, page is should be the
-    second page, numbered (iii), with the Table of Contents becoming (iv).
-    The appendix/ces or supplemental content pages should follow the
-    source/works cited. The appendix or supplemental content pages should
-    continue with the Arabic numbering. All page numbers must be bottom
-    centered. See next section for an example outline of the document.
-
-    Title page
-
-    \begin{itemize}
-        \item
-        Title written in ALL CAPS
-        \item
-        The title is centered at the top of the page
-        \item
-        The title cannot exceed three lines
-        \item
-        The word `by' is on its own line
-        \item
-        Your name should be capitalized in its regular way
-        \item
-        The phrases `Signature Work submitted for' are to remain as is
-        \item
-        Enter the date of submission with normal capitalization as Month, Day,
-        Year
-    \end{itemize}
-
-    Table of Contents
-
-    \begin{itemize}
-        \item
-        The table of contents should be left justified, each chapter should be
-        noted, including the page number.
-    \end{itemize}
-
-    \textbf{REMEMBER TO DELETE THIS PAGE BEFORE SUBMISSION}
-
     THESIS TITLE THAT EXTENDS OVER ONE LINE GOES IN INVERTED PYRAMID FORM
 
     by
 
-    First Name\_Last Name
+    Jincheng He
 
     Signature Work Product, in partial fulfilment of the Duke Kunshan
     University Undergraduate Degree Program
 
-    \emph{\{Enter date of submission with normal capitalization as Month,
-        Day, Year\}}
+    \emph{April 21, 2022}
 
     Signature Work Program
 
@@ -158,15 +98,13 @@
 
     \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
-    \emph{Mentor: First Name, Last Name and Division (without abbreviations)
-        using normal capitalization}
+    \emph{Mentor: Ming Li, Division of Natural and Applied Sciences}
 
     \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
     Marcia B. France, Dean of Undergraduate Studies
 
-    \protect\hypertarget{_Toc93021168}{}{}\textbf{ABSTRACT} \emph{(in
-    English)}
+    \textbf{ABSTRACT} \emph{(in English)}
 
     \emph{150 -- 200 words}. \emph{An abstract is a brief statement of the
     problem or the purpose of the research. It should indicate the
@@ -176,8 +114,7 @@
     section you write last to be sure that it accurately reflects the
     content of the document.}
 
-    \protect\hypertarget{_Toc93021169}{}{}\textbf{ABSTRACT} \emph{(in
-    Chinese)}
+    \textbf{ABSTRACT} \emph{(in Chinese)}
 
     150 - 200
     字。摘要是对问题或研究目的的简要说明。说明所使用的理论工作或实验计划，总结研究的主要发现，并指出主要结论。适用时应包括适当的安全信息。这应该是您最后编写的部分，以确保它准确反映文档的内容。
@@ -188,208 +125,10 @@
     shìdàng de ānquán xìnxī. Zhè yīnggāi shì nín zuìhòu biānxiě de bùfèn, yǐ
     quèbǎo tā zhǔnquè fǎnyìng wéndàng de nèiróng.
 
-    \hypertarget{acknowledgements}{%
 
+    \section{ACKNOWLEDGEMENTS}\label{acknowledgements}
 
-        \section{ACKNOWLEDGEMENTS}\label{acknowledgements}}
 
-    \emph{Individuals and organizations who helped with the research project
-    and provided financing are thanked in a paragraph of the thesis. Do not
-    include individual titles in the acknowledgments. However, it is
-    appropriate to state grant numbers and sponsors. Examples would like
-    SELF, SRS, SW Grants, etc.}
-
-    \hypertarget{table-of-content}{%
-
-
-        \section{TABLE OF CONTENT}\label{table-of-content}}
-
-    \hypertarget{section}{%
-
-
-        \section{}\label{section}}
-
-    \protect\hyperlink{_Toc93021168}{\textbf{ABSTRACT 3}}
-
-    \protect\hyperlink{_Toc93021169}{\textbf{ABSTRACT 3}}
-
-    \protect\hyperlink{acknowledgements}{\textbf{ACKNOWLEDGEMENTS 4}}
-
-    \protect\hyperlink{table-of-content}{\textbf{TABLE OF CONTENT 5}}
-
-    \protect\hyperlink{list-of-tables}{\textbf{LIST OF TABLES 6}}
-
-    \protect\hyperlink{table-of-figures}{\textbf{TABLE OF FIGURES 7}}
-
-    \protect\hyperlink{section-1}{\textbf{INTRODUCTION 8}}
-
-    \protect\hyperlink{material-and-methods}{\textbf{MATERIAL AND METHODS
-    9}}
-
-    \protect\hyperlink{results}{\textbf{RESULTS 10}}
-
-    \protect\hyperlink{discussion}{\textbf{DISCUSSION 11}}
-
-    \protect\hyperlink{conclusions}{\textbf{CONCLUSIONS 12}}
-
-    \protect\hyperlink{references}{\textbf{REFERENCES 13}}
-
-    \protect\hyperlink{appendices}{\textbf{APPENDICES 14}}
-
-    \protect\hyperlink{_Toc93021181}{\textbf{APPENDIX A: 15}}
-
-    \hypertarget{list-of-tables}{%
-
-
-        \section{LIST OF TABLES}\label{list-of-tables}}
-
-    \protect\hyperlink{_Toc93020061}{Table 1 Parameters for the optimization
-    of the principal component analysis for olive oil adulteration 10}
-
-    \emph{First add captions to your Tables. Right-click on the text above
-    and select Update Field to update this list. Word then searches the
-    document for your captions and automatically adds a list of tables,
-        sorted by page number. The captions must be formatted as in the DNAS SW
-        Style Guide}.
-
-    \hypertarget{table-of-figures}{%
-
-
-        \section{TABLE OF FIGURES}\label{table-of-figures}}
-
-    \protect\hyperlink{_Toc93020444}{Figure 1 The notorious BTC (Brandon the
-    Cat) 10}
-
-    \emph{First add captions to your figures. Right-click on the text above
-    and select Update Field to update this list. Word then searches the
-    document for your captions and automatically adds a list of figures,
-        sorted by page number. The captions must be formatted as in the DNAS SW
-        Style Guide}.
-
-    \hypertarget{section-1}{%
-
-
-        \section{}\label{section-1}}
-
-    \hypertarget{introduction}{%
-
-
-        \section{INTRODUCTION}\label{introduction}}
-
-    \emph{This section includes a clear statement of the problem and the
-    reasons for studying it.~Provide a detailed yet concise background
-    discussion of the problem and the significance, scope, and limits of the
-    work. Outline what has been done previously by citing truly pertinent
-    literature but do not include a general survey of semi-relevant
-    literature.~ State how your work differs from earlier work in the field
-    and demonstrate the continuity from the previous work to your own.}
-
-    \hypertarget{material-and-methods}{%
-
-
-        \section{MATERIAL AND METHODS}\label{material-and-methods}}
-
-    \emph{This section is obviously discipline specific so use the
-    nomenclature that is common for your discipline. However, this section
-    should provide sufficient detail about the materials and the methods
-    used so that other experienced workers can repeat the experiment and
-    obtain comparable results. Cite the appropriate literature when using a
-    standard method or protocol and give only the details needed. Identify
-    the materials used in the research. For example, computer systems used,
-        mathematical theorems exploited, etc.; give information on the purity of
-        all chemicals and reagents employed in the research; include the
-        chemical/biological names of all compounds and chemical formulas of
-        substances that are new or uncommon. Use standard systematic
-        nomenclature to unambiguously define well-established compounds,
-        processes, equipment, etc.}
-
-    \hypertarget{results}{%
-
-
-        \section{RESULTS}\label{results}}
-
-    \emph{Summarize the data collected in this section, and their
-    statistical treatment. Include only relevant data, but give sufficient
-    detail to justify the conclusions.~ It is appropriate in this section to
-    use equations, figures, and tables to display your data. Extensive, but
-    relevant data, should be reserved for an appendix where it is identified
-    as supporting information.}
-
-    \emph{The table or figure must follow as closely as possible after the
-    paragraph in which it is referenced. Titles/captions should be kept
-    brief.}
-
-    \protect\hypertarget{_Toc93020061}{}{}Table 1 Parameters for the
-    optimization of the principal component analysis for olive oil
-    adulteration
-
-    \begin{longtable}[]{@{}llll@{}}
-        \toprule
-        \emph{Replace} & \emph{With} & \emph{Your} & \emph{Table} \\
-        \midrule
-        \endhead
-        &             &             &              \\
-        &             &             &              \\
-        \bottomrule
-    \end{longtable}
-
-    \includegraphics[width=1.95833in,height=1.46875in]{vertopal_23eb081fc9d74a2dbd905a0fc9194429/media/image1.jpeg}\emph{(Replace
-    with your figure)}
-
-    \protect\hypertarget{_Toc93020444}{}{}Figure 1 The notorious BTC
-    (Brandon the Cat)
-
-    \hypertarget{discussion}{%
-
-
-        \section{DISCUSSION}\label{discussion}}
-
-    \emph{The discussion section is where you interpret and compare the
-    results. The objective is to point out the features and limitations of
-    the work. Relate your results to current knowledge in the field and to
-    the original purpose for undertaking the project.}
-
-    \hypertarget{conclusions}{%
-
-
-        \section{CONCLUSIONS}\label{conclusions}}
-
-    \emph{This section is written to put the interpretation of the results
-    into the context of the original problem.~ Do not repeat the discussion
-    points or include irrelevant material. The conclusion should be based on
-    the evidence presented.}
-
-    \hypertarget{references}{%
-
-
-        \section{REFERENCES}\label{references}}
-
-    \emph{Many bibliographic styles are acceptable for publications in the
-    natural sciences. Only for the sake of having one standard across all
-    disciplines, you should use this one:}
-
-    \emph{\underline{Body: Superscripted Number}. \{e.g. Nucleotide excision
-    repair (NER) is a versatile, error-free mechanism to identify and remove
-    a wide assortment of chemically unrelated lesions.\textsuperscript{18}
-    NER can be classified into two sub-pathways based on the way DNA lesions
-    are identified.\textsuperscript{19} In transcription coupled NER
-        (TC-NER), damaged DNA is identified by the stalling of RNA polymerases
-        when they encounter bulky covalent DNA lesions.\textsuperscript{20}}
-
-    \emph{\underline{Journal Article}: Evans, D. A., Fitch, D. M., Smith, T.
-    E., Cee, V. J. Application of Complex Aldol Reactions to the Total
-    Synthesis of Phorboxazole B.~J. Am. Chem.
-    Soc.~\textbf{2000,}~122,~10033-10046.}
-
-    \emph{\underline{Book}: Anastas, P. T., Warner, J. C.~Green Chemistry:
-    Theory and Practice; Oxford University Press: Oxford, 1998.}
-
-    \hypertarget{appendices}{%
-
-
-        \section{APPENDICES}\label{appendices}}
-
-    \protect\hypertarget{_Toc93021181}{}{}\textbf{APPENDIX A: APPENDIX
-    TITLE}
+    \tableofcontents
 
 \end{document}
