--- a/Paper.tex
+++ b/Paper.tex
@@ -82,7 +82,7 @@
 
     \textbf{Division of Natural and Applied Sciences}
 
-    THESIS TITLE THAT EXTENDS OVER ONE LINE GOES IN INVERTED PYRAMID FORM
+    A STUDY ON THE DEEP LEARNING BASED TARGET SPEAKER SPEECH SEPARATION ALGORITHMS
 
     by
 
