Add reference section into table of contents

--- a/Paper.tex
+++ b/Paper.tex
@@ -150,6 +150,7 @@
 
         \bibliographystyle{IEEEbib}
         \bibliography{reference}
+        \addcontentsline{toc}{section}{References}
     \end{spacing}
 
 \end{document}
